# Multi-platform-screen-grabbing-utility

./: .gitignore  Cargo.toml  settings.json
src/: configuration.rs  draw_window.rs  gui.rs  image_combiner.rs  image_formatter.rs  lib.rs  main.rs  main_window.rs  screenshot_window.rs  screenshots.rs  test.rs  thread_manager.rs  window.rs
src/windows/: drawing_window.rs  main_window.rs  mod.rs  preview_window.rs  screenshot_window.rs  select_screen_window.rs  select_window.rs  settings_window.rs
tests/: configuration_test.rs  image_combiner_test.rs  image_formatter_test.rs  screenshot_test.rs
