[package]
name = "mpsg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
env_logger = "0.10.0"
image = "0.24.6"
log = "0.4.19"
screenshots = "0.7.0"
serde = {version = "1.0.174", features = ["derive"]}
serde_json = "1.0.103"
thread-priority = "0.13.1"
color-hex = "0.2.0"
eframe = "0.22.0"
egui = {version="0.22.0", features = ["serde", "color-hex"]}
egui_extras = {version="0.22.0", features = ["image"] }
