[package]
name = "mpsg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
env_logger = "0.10.0"
image = "0.24.6"
log = "0.4.19"
screenshots = "0.7.0"
serde = {version = "1.0.174", features = ["derive"]}
serde_json = "1.0.103"
color-hex = "0.2.0"
egui = {version="0.22.0", features = ["serde", "color-hex"]}
eframe = "0.22.0"
egui_extras = {version="0.22.0", features = ["svg", "image"] }
anyhow = "1.0.72"
mouse_position = "0.1.3"
notifica = "3.0.2"
chrono = "0.4.26"
directories = "5.0.1"
native-dialog = "0.6.4"
rdev = "0.5.3"
